--- a/sideproject_firebase/socialClubApp/views/clubList.ejs
+++ b/sideproject_firebase/socialClubApp/views/clubList.ejs
@@ -16,14 +16,14 @@
 </div>
 
 <div class="club-categories">
-    <div class="club-category bg-secondary" id="study">study</div>
-    <div class="club-category bg-secondary" id="sports">sports</div>
-    <div class="club-category bg-secondary" id="pet">pet</div>
-    <div class="club-category bg-secondary" id="vehicle">vehicle</div>
-    <div class="club-category bg-secondary" id="game">game</div>
-    <div class="club-category bg-secondary" id="crafts">crafts</div>
-    <div class="club-category bg-secondary" id="beauty">beauty</div>
-    <div class="club-category bg-secondary" id="book">book</div>
+    <div class="club-category bg-info" id="study">Study</div>
+    <div class="club-category bg-info" id="sports">Sports</div>
+    <div class="club-category bg-info" id="pet">Pet</div>
+    <div class="club-category bg-info" id="vehicle">Vehicle</div>
+    <div class="club-category bg-info" id="game">Game</div>
+    <div class="club-category bg-info" id="crafts">Crafts</div>
+    <div class="club-category bg-info" id="beauty">Beauty</div>
+    <div class="club-category bg-info" id="book">Book</div>
 </div>
     
 <div class="club-list">
@@ -71,9 +71,15 @@
       if(getData){//가져올 클럽데이터가 있으면 실행
         getData.docs.forEach((doc,index)=>{
           let thumbnail = 'https://source.unsplash.com/random';//엑박이미지
-          if(doc.data().club_thumbnail){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
-            thumbnail = doc.data().club_thumbnail;
+          if(doc.data().club_photo){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
+            thumbnail = doc.data().club_photo;
           }
+          const result = getDistanceFromLatLonInKm(myLat, myLng, doc.data().lat, doc.data().lng);
+          let distance = Math.round(result*1000)/1000;
+          if(!localStorage.getItem("email")){
+            distance = "현재 위치를 알 수 없음"
+          }
+          console.log(distance+"km");
           const template =`
           <div class="club-container" id="${doc.id}">
             <div class="thumbnail" style="background-image: url('${thumbnail}"></div>
@@ -81,6 +87,7 @@
                 <h5 class="club-name">${doc.data().club_name}</h5>
                 <p class="club-aim">${doc.data().club_aim}</p>
                 <p class="club-loc">${doc.data().club_loc}</p>
+                <p class="distance">거리: ${distance} km</p>
                 <p class="float-end">❤️0</p>
             </div>
           </div>
@@ -95,9 +102,13 @@
       if(getData){
         getData.docs.forEach((doc,index)=>{
           let thumbnail = 'https://source.unsplash.com/random';//엑박이미지
-          if(doc.data().club_thumbnail){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
-            thumbnail = doc.data().club_thumbnail;
+          if(doc.data().club_photo){//이미지가 있으면 썸네일 사용 없으면 엑박이미지 사용
+            thumbnail = doc.data().club_photo;
           }
+          const result = getDistanceFromLatLonInKm(myLat, myLng, doc.data().lat, doc.data().lng);
+          const distance = Math.round(result*1000)/1000;
+          console.log(distance+"km");
+
           const template =`
           <div class="club-container" id="${doc.id}">
             <div class="thumbnail" style="background-image: url('${thumbnail}"></div>
@@ -105,13 +116,11 @@
                 <h5 class="club-name">${doc.data().club_name}</h5>
                 <p class="club-aim">${doc.data().club_aim}</p>
                 <p class="club-loc">${doc.data().club_loc}</p>
+                <p class="distance">거리: ${distance}km</p>
                 <p class="float-end">❤️0</p>
             </div>
           </div>
           `;
-          const result = getDistanceFromLatLonInKm(myLat, myLng, doc.data().lat, doc.data().lng);
-          const distance = Math.round(result*1000)/1000;
-          console.log(distance+"km");
           //현재 위치에서 n km보다 가까우면 리스트에 출력
           if(distance < searchArea) $('.club-list').append(template);
         })
