--- a/sideproject_firebase/socialClubApp/views/footer.ejs
+++ b/sideproject_firebase/socialClubApp/views/footer.ejs
@@ -2,7 +2,7 @@
   <div class="col">
     <hr>
     <h5 class="text-center">
-      Copyright 2023. 소소모임 all right reserved.
+      Copyright 2023. 소소모임, Garden Park AND Seulgi Lee all right reserved.
     </h5>
   </div>
 </div>
