--- a/sideproject_firebase/socialClubApp/views/header.ejs
+++ b/sideproject_firebase/socialClubApp/views/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-secondary">
+<nav class="navbar navbar-expand-lg bg-info">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">소소모임</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
