--- a/sideproject_firebase/socialClubApp/views/index.ejs
+++ b/sideproject_firebase/socialClubApp/views/index.ejs
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>소소모임</title>
+    <meta charset='utf-8' />
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@300;500&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://kit.fontawesome.com/cc9f761dd2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
-      <%-include("header.ejs")%>
-      <%-include(pageName)%>
-      <%-include("footer.ejs")%>
-      <!-- 글쓰기에서 유효성체크 후 알림 처리 모달 추가 -->
+      <%-include("header.ejs") %>
+      <%-include(pageName) %>
+      <%-include("footer.ejs") %>
       <%-include("common/modal_alert.ejs")%>
       <%-include("common/modal_confirm.ejs")%>
     </div>
-    </div>
   </body>
-  <script>
-    
-  </script>
 </html>
